infra/overlays/stage/redis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: redis
  annotations:
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - $(REDIS_HOST)
    secretName: redis-commander-tls
  rules:
  - host: $(REDIS_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander-service
            port:
              number: 8081
